## Process this file with automake to produce Makefile.in

sbin_PROGRAMS = hfsdump
hfsdump_SOURCES = hfsdump.c

hfsdump_CFLAGS = -I..

hfsdump_LDADD = \
	../../zbxcomms/libzbxcomms.a \
	../../zbxdbhigh/libzbxdbhigh.a \
	../../zbxlog/libzbxlog.a \
	../../zbxconf/libzbxconf.a \
	../../zbxcommon/libzbxcommon.a \
	../../zbxcrypto/libzbxcrypto.a \
	../../zbxsys/libzbxsys.a \
	#

